--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.6.0"
   }
 }
